<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dial_fragment"
    android:background="@color/black">

   <GridLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal|bottom"
       android:columnCount="3"
       android:rowCount="4"
       android:layout_marginBottom="96dp"
       android:background="@color/black">

      <androidx.appcompat.widget.AppCompatButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/_1"
         android:textColor="@color/white"
         android:background="@color/black"
         android:id="@+id/dial1"
          android:textSize="36sp"
          android:padding="12dp"/>
      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_2"
          android:textColor="@color/white"
          android:background="@color/black"
          android:id="@+id/dial2"
          android:textSize="36sp"
          android:padding="12dp"/>
      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_3"
          android:textColor="@color/white"
          android:background="@color/black"
          android:id="@+id/dial3"
          android:textSize="36sp"
          android:padding="12dp"/>
      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_4"
          android:textColor="@color/white"
          android:background="@color/black"
          android:id="@+id/dial4"
          android:textSize="36sp"
          android:padding="12dp"/>
      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_5"
          android:textColor="@color/white"
          android:background="@color/black"
          android:id="@+id/dial5"
          android:textSize="36sp"
          android:padding="12dp"/>
      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_6"
          android:textColor="@color/white"
          android:background="@color/black"
          android:id="@+id/dial6"
          android:textSize="36sp"
          android:padding="12dp"/>
      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_7"
          android:textColor="@color/white"
          android:background="@color/black"
          android:id="@+id/dial7"
          android:textSize="36sp"
          android:padding="12dp"/>
      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_8"
          android:textColor="@color/white"
          android:background="@color/black"
          android:id="@+id/dial8"
          android:textSize="36sp"
          android:padding="12dp"/>
      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_9"
          android:textColor="@color/white"
          android:background="@color/black"
          android:id="@+id/dial9"
          android:textSize="36sp"
          android:padding="12dp"/>
      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/astrik"
          android:textColor="@color/white"
          android:background="@color/black"
          android:id="@+id/dial_astrik"
          android:textSize="36sp"
          android:padding="12dp" />
      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/_0"
          android:textColor="@color/white"
          android:background="@color/black"
          android:id="@+id/dial0"
          android:textSize="36sp"
          android:padding="12dp"/>
      <androidx.appcompat.widget.AppCompatButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/hash"
          android:textColor="@color/white"
          android:background="@color/black"
          android:id="@+id/dial_hash"
          android:textSize="36sp"
          android:padding="12dp"/>

   </GridLayout>

   <androidx.appcompat.widget.AppCompatImageButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/call_button"
      android:src="@drawable/call_button"
      android:background="@color/black"
      android:layout_gravity="center_horizontal|bottom"
      android:layout_marginBottom="16dp"
       android:contentDescription="@string/call_icon"/>

   <TextView
       android:id="@+id/dialed_number"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_marginEnd="24dp"
       android:layout_marginBottom="64dp"
       android:maxEms="7"
       android:maxLines="1"
       android:focusableInTouchMode="true"
       android:focusable="true"
       android:clickable="true"
       android:enabled="true"
       android:scrollHorizontally="true"
       android:textColor="@color/white"
       android:textSize="32sp"/>

   <androidx.appcompat.widget.AppCompatImageButton
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
      android:src="@drawable/baseline_backspace_24"
      android:id="@+id/backSpace"
      android:layout_gravity="end|center"
      android:layout_marginBottom="64dp"
       android:layout_marginEnd="42dp"
       android:background="@color/black"
       android:contentDescription="@string/image_icon"/>




</FrameLayout>