<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:id="@+id/history_recycler_cardView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/history_cardView_layout"
            android:background="@drawable/vintage_background">

            <TextView
                android:id="@+id/history_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:padding="4dp"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/history_contact_number"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/_91_1234567890"
                android:textStyle="bold"
                android:padding="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/history_name" />

            <TextView
                android:id="@+id/history_date"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:padding="4dp"
                android:text="@string/_24_05_2023"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/history_duration"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/_00_25_21"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.086"
                app:layout_constraintStart_toEndOf="@+id/history_contact_number"
                app:layout_constraintTop_toBottomOf="@+id/history_name" />

            <TextView
                android:id="@+id/history_call_type"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/outgoing"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/history_date"
                app:layout_constraintTop_toBottomOf="@+id/history_date" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/history_call_image_button"
                android:layout_width="53dp"
                android:layout_height="35dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:src="@drawable/compressed_call_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/history_message_image_button"
                android:layout_width="66dp"
                android:layout_height="46dp"
                android:src="@drawable/message_vector"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/history_info_image_button"
                app:layout_constraintStart_toEndOf="@+id/history_call_image_button" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/history_info_image_button"
                android:layout_width="66dp"
                android:layout_height="46dp"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:src="@drawable/info_vector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>